feat(explore): [1/n] improve answer synthesis with new framework
Instead of summarizing each answer that the user provides for a source of
meaning, synthesize all the answers together into something more comprehensive
and useful. This is based on the recommendations of the SoMeCaM paper.

This patch implements the API endpoint and tests scaffolding. A future commit
will update the UI, including the downloadable report.
